some new feature CRUD

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -7,16 +7,19 @@
     </svg>
   </a>
 </nav>
-
-<h3> View Book Details</h3>
-<div>
+<div class="px-5">
+  <h3> View Book Details</h3>
   <div>
-    <label> <b> tytuł: </b></label> {{book.title}}
-  </div>
-  <div>
-    <label> <b> autor: </b></label> {{book.author}}
-  </div>
-  <div>
-    <label> <b> rok wydania: </b></label> {{book.publishYear}}
+    <div>
+      <label> <b> tytuł: </b></label> {{book.title}}
+    </div>
+    <div>
+      <label> <b> autor: </b></label> {{book.author}}
+    </div>
+    <div>
+      <label> <b> rok wydania: </b></label> {{book.publishYear}}
+    </div>
   </div>
 </div>
+
+
