--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,9 @@
 <footer class="footer">
   <div class="footer-row">
     <div class="col">
-      <h1 class="col-item">myLibrary</h1>
-      <p class="col-item">
-        manage your home library.
-      </p>
+      <h1 class="col-item h1" >myLibrary</h1>
     </div>
     <hr class="socket"/>
-    <div class="col-md-5 text-center">Paweł Nankiewicz &copy;2022</div>
+    <div class="col-md-5 text-center footer-brand">pai by Paweł Nankiewicz &copy; 2022</div>
   </div>
 </footer>
