--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "https://fonts.googleapis.com/css2?family=Lobster&family=JetBrains+Mono&display=swap";
+
+html, body, app-root {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.flui{
+  height: 100%;
+}
+
+.footer{
+  clear: both;
+  position: fixed;
+  width: 100%;
+  bottom:0;
+
+}
+
+
